# sequential-ft-transformer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
ft-transformer-functional/: embeddings.py
notebooks/: fttransformer-demo.ipynb  fttransformer-ple-demo.ipynb  fttransformer-sequential-demo.ipynb  linear-demo.ipynb  periodic-demo.ipynb  ple-demo.ipynb  sequential-demo.ipynb
src/sequential_ft_transformer/: __init__.py  embeddings.py  fttransformer.py  plotting.py  preprocessing.py  transformer.py
tests/: end_to_end_training.py  test_end_to_end.py  test_sequential_ft_transformer.py
